--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/AddAlarm"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/change_view"
+        android:onClick="changeView" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
