Full screen picture activity stub added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:id="@+id/AddAlarm"
+        android:id="@+id/ChangeView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/change_view"
