--- a/app/src/main/res/layout/big_image_layout.xml
+++ b/app/src/main/res/layout/big_image_layout.xml
@@ -12,7 +12,7 @@
     android:id="@+id/bigImageView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scaleType="fitXY"
+    android:scaleType="centerCrop"
     android:adjustViewBounds="true"/>
     <TextView
         android:id="@+id/info"
