--- a/app/src/main/res/layout/big_image_layout.xml
+++ b/app/src/main/res/layout/big_image_layout.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<LinearLayout android:id="@+id/firstLayout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:id="@+id/fileName"
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scaleType="centerCrop"
-    android:adjustViewBounds="true"/>
+    android:adjustViewBounds="true"
+        android:contentDescription="@string/app_name"/>
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
