--- a/app/src/main/res/layout/big_image_layout.xml
+++ b/app/src/main/res/layout/big_image_layout.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout android:id="@+id/firstLayout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/fileName"
         android:layout_width="match_parent"
         android:layout_height="20dp" />
     <ImageView
-    android:id="@+id/bigImageView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scaleType="centerCrop"
-    android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name"/>
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
